@@ -24,5 +24,10 @@ setup(
     install_requires=requirements + requirements_plugins,
     packages=find_packages(),
     include_package_data=True,
+    entry_points={
+        'console_scripts': [
+            'cabot = cabot.entrypoint:main',
+        ],
+    },
     zip_safe=False
 )
